# pickachu

./: .gitignore
src/accupick3d/: ReadMe.md
src/aircraft/: CMakeLists.txt  package.xml
src/aircraft/config/: param.yaml
src/aircraft/launch/: aircraft.launch
src/aircraft/msg/: ROI.msg
src/aircraft/strategy/: strategy.py
src/aircraft/strategy/lib/: aircraft.py  aircraft_new.py  nodehandle.py  nodehandle_new.py
src/arm_control/: CMakeLists.txt  package.xml  readme.md
src/arm_control/control/: control.py
src/arm_control/control/lib/: arm_cmd.py  nodehandle.py
src/arm_control/srv/: armCmd.srv
src/flaw_detection/: CMakeLists.txt  package.xml  readme.md
src/flaw_detection/config/: param.yaml
src/flaw_detection/launch/: flaw.launch
src/flaw_detection/strategy/: strategy.py
src/gomoku/: CMakeLists.txt  package.xml  readme.md
src/gomoku/config/: gomoku.yaml
src/gomoku/launch/: gomoku.launch
src/gomoku/strategy/: CMakeLists.txt  gomoku.cpp  main.cpp  nodehandle.cpp  nodehandle.hpp  strategy.cpp  strategy.hpp  suction.cpp  suction.hpp
src/image_process/GUI/: ImageProcessInterface.html
src/image_process/Task_1_weight/: task_classes.txt
src/image_process/Task_2_weight/: train.txt
src/image_process/Task_3_weight/: train.txt
src/image_process/circle_deteced/: CMakeLists.txt  package.xml
src/image_process/yolov3_ros/: yolo.py  yolo_video.py
src/vacuum/arduino_ros_vacuumServiceServer/: arduino_ros_vacuumServiceServer.ino
src/web/: mobile_platform.html  pickachu.html
src/web/css/: air.css  flaw.css  form.css  gomoku.css
(+28 files in other folders)
